# smishing_detection

./: .gitignore  README.md  main.py  pyproject.toml  request_agents.slurm  run.slurm  start_server.slurm
data/: D2.csv  D2_new.csv  agent1.ndjson  agent1_test.ndjson  smishing_output.ndjson  test_output.ndjson
slides/: Smishing Detection via Fact-Checking Perspective.pptx
src/: agents.py  data_processing.py  detection.py  requirements.txt  tools.py
src/agents/: agent1.py
